# stm32f1-hal

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/f103c8/: Cargo.toml  README.md
examples/f103c8/.cargo/: config.toml
examples/f103c8/src/: i2c_task.rs  led_task.rs  main.rs  os.rs  spi_task.rs  uart_task.rs
scripts/: build.py  generate_remap_table.py
src/: backup_domain.rs  bb.rs  dma.rs  flash.rs  interrupt.rs  lib.rs  mcu.rs  nvic_scb.rs  prelude.rs  raw_os.rs  time.rs
src/afio/: i2c_remap.rs  mod.rs  spi_remap.rs  timer_remap.rs  uart_remap.rs
src/common/: atomic_cell.rs  atomic_mutex.rs  bus_device.rs  holder.rs  mod.rs  mutex.rs  notifier.rs  prelude.rs  ringbuf.rs  simplest_heap.rs  std_mutex.rs
src/common/dma/: circular_buffer_rx.rs  mod.rs  ringbuf_tx.rs
src/common/i2c/: bus_it.rs  device.rs  i2c_bus_it.rs  i2c_device.rs  i2c_master_it.rs  mod.rs  mutex_device.rs  utils.rs
src/common/mutex/: atomic_mutex.rs  mod.rs  std_mutex.rs
src/common/os/: mod.rs  mutex_impls.rs  notifier.rs  notifier_impls.rs  os_impls.rs
src/common/os/timeout/: fake_impls.rs  mod.rs  std_impls.rs  tick.rs
src/common/spi/: bus_it.rs  device.rs  mod.rs  utils.rs
src/common/timer/: counter.rs  fix_timer.rs  mod.rs  pwm.rs
src/common/uart/: mod.rs  uart_dma.rs  uart_it.rs  uart_poll.rs
src/gpio/: mod.rs
src/i2c/: i2c1.rs  i2c2.rs  mod.rs
src/rcc/: enable.rs  mod.rs
src/spi/: mod.rs  spi1.rs  spi2.rs  spi3.rs
src/timer/: mod.rs  monotonic.rs  syst.rs  timer1.rs  timer10.rs  timer11.rs  timer12.rs  timer13.rs  timer14.rs  timer15.rs  timer16.rs  timer17.rs  timer2.rs  timer3.rs  timer4.rs  timer5.rs  timer6.rs  timer7.rs  timer8.rs  timer9.rs
src/uart/: mod.rs  uart4.rs  uart5.rs  usart1.rs  usart2.rs  usart3.rs
