[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    edition = "2024"
    license = "MIT OR Apache-2.0"
    name = "f103c8"
    version = "0.1.0"

[features]
    default = ["uart_it", "spi_it_sole"]
    exti = []
    i2c = []
    i2c_it_bus = ["i2c"]
    i2c_it_sole = ["i2c"]
    spi = []
    spi_it_sole = ["spi"]
    timer = []
    uart = []
    uart_dma = ["uart"]
    uart_it = ["uart"]
    uart_poll = ["uart"]

[dependencies]
    [dependencies.stm32f1-hal]
        features = ["f103", "x8", "critical-section-single-core"]
        path = "../.."

[profile.release]
    codegen-units = 1
    debug = true
    lto = true
    opt-level = 1
    panic = "abort"
