[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    edition = "2024"
    license = "MIT OR Apache-2.0"
    name = "f103c8"
    version = "0.1.0"

[features]
    default = ["exti", "timer", "uart-it", "spi-it-bus"]
    exti = []
    i2c = []
    i2c-it-bus = ["i2c"]
    i2c-it-sole = ["i2c"]
    spi = []
    spi-it-bus = ["spi"]
    spi-it-sole = ["spi"]
    timer = []
    uart = []
    uart-dma = ["uart"]
    uart-it = ["uart"]
    uart-poll = ["uart"]

[dependencies]
    cortex-m-rt = "0.7"
    defmt = "1"
    defmt-or-log = { version = "0.2", features = ["defmt"] }
    defmt-rtt = "1"
    [dependencies.stm32f1-hal]
        features = ["f103", "x8", "defmt", "critical-section-single-core"]
        path = "../.."

[profile.dev]
    codegen-units = 1
    debug = 2
    # lto = "fat"
    opt-level = 1
    panic = "abort"
